Fix vital data parsing and update z-index in CSS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1868,7 +1868,7 @@ table.dataTable thead .sorting_desc_disabled:before {
   transition: 240ms;
   left: 12px;
   top: -8px;
-  z-index: 1;
+  z-index: 0;
   color: #888;
 }
 .form-focus.focused .focus-label {
@@ -1876,7 +1876,7 @@ table.dataTable thead .sorting_desc_disabled:before {
   font-weight: 300;
   top: -14px;
   font-size: 12px;
-  z-index: 1;
+  z-index: 0;
 }
 .form-focus .form-control {
   height: 50px;
@@ -1963,7 +1963,7 @@ table.dataTable thead .sorting_desc_disabled:before {
   font-weight: 300;
   top: -20px;
   font-size: 12px;
-  z-index: 1;
+  z-index: 0;
 }
 .action-label .label {
   display: inline-block;
